[GStreamer] Several buffering fixes https://bugs.webkit.org/show_bug.cgi?id=206234

Patch by Thibault Saunier <tsaunier@igalia.com> on 2020-01-15
Reviewed by Xabier Rodriguez-Calvar.

No new tests as this is already tested.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::durationChanged): Minor typo fix
(WebCore::MediaPlayerPrivateGStreamer::fillTimerFired): Query buffering on the pipeline not the source
    otherwise GstBaseSrc returns some useless values before `downloadbuffer` actually gives us the
    info about DOWNLOAD buffering status. Also ignores response if they are not in DOWNLOAD mode as those
    will end up screwing our buffering management algorithm.
(WebCore::MediaPlayerPrivateGStreamer::handleMessage):
    - Detect when DOWNLOAD is done by using the `downloadbuffer` `GstCacheDownloadComplete`
      element message which is what is supposed to be used for that purpose.
    - Fix the way we detect that buffering is done (mostly when using a `downloadbuffer`) by relying on a
      buffering query to check if it is still buffering.
(WebCore::MediaPlayerPrivateGStreamer::updateBufferingStatus): Ensure that we properly pause the pipeline when
    restarting buffering. There were cases when not using `downloadbuffer` where we didn't pause the pipeline
    leading to pretty bad user experience.
(WebCore::MediaPlayerPrivateGStreamer::updateStates): Buffering should happen only on **non live** pipelines.

Canonical link: https://commits.webkit.org/219376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254565 268f45cc-cd09-0410-ab3c-d52691b4dbfc